--- a/Complete_Example/package.json
+++ b/Complete_Example/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "../node_modules/.bin/nodemon --config nodemon.json src/index.ts"
+    "start": "node_modules/.bin/nodemon --config nodemon.json src/index.ts"
   },
   "keywords": [],
   "author": "",
